# exo-scraper

./: LICENSE  README.md  lightkurve_exoplanet_tutorial.ipynb  main.py  pyproject.toml
.github/workflows/: ci.yml
