[project]
name = "exo-scraper"
version = "0.1.0"
description = "A cloud-hosted app to analyse MAST data of star brightness in the search for exoplanets using Python's lightkurve library."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lightkurve>=2.5.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "bokeh>=3.9.0",
    "jupyter>=1.1.1",
    "ruff>=0.15.12",
]
